@@ -1,3 +1,11 @@
+2015-11-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Rewrote handling of ignored/forced attributes, changes include:
+	  - new 'report_ignore_added_attrs' option
+	  - new 'report_ignore_removed_attrs' option
+	  - print human-readable info about ignored attributes in report
+	  - code cleanup
+	  - bug fixes
+
 2015-11-07 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Added new 'report_ignore_e2fsattrs' option
 
